# waylestia

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCS_INDEX.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md
apps/browser/: README.md  main.ts
apps/calendar/: main.ts
apps/editor/: README.md  main.ts
apps/files/: README.md  main.ts
apps/mail/: README.md  main.ts
apps/media/: README.md  main.ts
apps/settings/: main.ts
apps/terminal/: main.ts
assets/: README.md
assets/icons/: README.md
assets/wallpapers/: README.md
assets/widgets/.dart_tool/: package_config.json
assets/widgets/clock/: index.html  manifest.toml
assets/widgets/dashboard/: index.html  manifest.toml
assets/widgets/sysinfo/: index.html  manifest.toml
core/: Cargo.toml
core/src/: ipc.rs  main.rs  media.rs  perf.rs  security.rs  state.rs
ganymede-core/: Cargo.toml
ganymede-core/src/: main.rs
ganymede-hotbar/: Cargo.toml
ganymede-hotbar/src/: main.rs
ganymede-runtime/: deno.json
ganymede-runtime/src/: mod.ts
ganymede-widgets/: pubspec.yaml
ganymede-widgets/.dart_tool/: package_config.json  package_graph.json
ganymede-widgets/lib/: main.dart
proto/: core_runtime.proto
protobuf/: README.md  apps.proto  core_runtime.proto  core_shell.proto  runtime_widgets.proto  shell_widgets.proto
scripts/: README.md  install.sh  restart.sh  start.sh  stop.sh  uninstall.sh
scripts/installers/: README.md
shell/src/modules/: dashboard.ts  zones.ts  (+1 more)
waylestia-apps/browser/: main.ts
waylestia-apps/calendar/: README.md
waylestia-apps/editor/: main.ts
waylestia-apps/files/: main.ts
waylestia-apps/mail/: main.ts
waylestia-apps/settings/: README.md  main.ts
waylestia-apps/terminal/: README.md  main.ts
waylestia-assets/: README.md
waylestia-core/src/: hyprland.rs  lib.rs  perf.rs
waylestia-engine/: README.md
waylestia-engine/servo/: README.md
waylestia-scripts/: README.md
waylestia-shell/: deno.json
waylestia-shell/src/: appRegistry.ts  main.ts
waylestia-webview/servo/: README.md
waylestia-widgets/: pubspec.yaml
waylestia-widgets/.dart_tool/: package_graph.json
waylestia-widgets/lib/: main.dart
webview/: README.md  waylestia-webview-api.ts
widgets/: Cargo.toml  README.md  build.rs
widgets/src/: ipc.rs  lib.rs  loader.rs  main.rs  manifest.rs  renderer.rs  state.rs
(+6 files in other folders)
