[package]
name = "waylestia-core"
version = "0.1.0"
edition = "2021"
authors = ["Waylestia Team"]
description = "Daemon principal du shell Wayland complet (Hyprland-centric, suite OS)"

[dependencies]
hyprland = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
