[package]
name = "waylestia-core"
version = "0.1.0"
edition = "2021"
authors = ["Waylestia Team"]
description = "Daemon principal du shell Wayland complet (Hyprland-centric, suite OS)"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protocol Buffers
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"

# Hyprland integration
hyprland = "0.3"

# System information
sysinfo = { version = "0.30", features = ["system"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Other utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
notify = "6.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "waylestia-core"
path = "src/main.rs"

[lib]
name = "waylestia_core"
path = "src/lib.rs"

[build-dependencies]
prost-build = "0.12"

